# Cmake-Template

./: CMakeLists.txt  README.md  TutorialConfig.h.in
libraries/Utility/: CmakeLists.txt  Utility.h
libraries/stack/: stack.cpp  stack.h
src/: main.cpp
